[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/SegmentGauge.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ui/MissileIcon.gd" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.05, 0.07, 0.09, 0.85)
border_width_left = 2
border_width_top = 0
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.8, 1, 0.55)
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6

[node name="HUD" type="CanvasLayer"]
layer = 1
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
anchor_right = 1.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = -6.0

[node name="Row" type="HBoxContainer" parent="TopBar/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 2
theme_override_constants/separation = 12

[node name="EnergyBox" type="VBoxContainer" parent="TopBar/MarginContainer/Row"]
size_flags_horizontal = 0
theme_override_constants/separation = 1

[node name="EnergyTitle" type="Label" parent="TopBar/MarginContainer/Row/EnergyBox"]
text = "ENERGY"
theme_override_colors/font_color = Color(0.65, 0.85, 1, 1)
theme_override_font_sizes/font_size = 10

[node name="EnergyRow" type="HBoxContainer" parent="TopBar/MarginContainer/Row/EnergyBox"]
alignment = 0
theme_override_constants/separation = 8

[node name="EnergyGauge" type="Control" parent="TopBar/MarginContainer/Row/EnergyBox/EnergyRow"]
custom_minimum_size = Vector2(210, 10)
size_flags_horizontal = 3
script = ExtResource("2")
segments = 12
fill_color = Color(0.28, 0.95, 0.35, 1)
empty_color = Color(0.12, 0.18, 0.22, 0.9)
outline_color = Color(0.65, 0.85, 1, 0.65)
segment_gap = 1.5
outline_width = 1.0

[node name="EnergyValue" type="Label" parent="TopBar/MarginContainer/Row/EnergyBox/EnergyRow"]
size_flags_horizontal = 0
text = "0/0"
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 10

[node name="Spacer" type="Control" parent="TopBar/MarginContainer/Row"]
size_flags_horizontal = 3

[node name="MissileBox" type="VBoxContainer" parent="TopBar/MarginContainer/Row"]
size_flags_horizontal = 0
theme_override_constants/separation = 1

[node name="MissileIcon" type="Control" parent="TopBar/MarginContainer/Row/MissileBox"]
custom_minimum_size = Vector2(16, 16)
script = ExtResource("3")

[node name="MissileRow" type="HBoxContainer" parent="TopBar/MarginContainer/Row/MissileBox"]
alignment = 0
theme_override_constants/separation = 8

[node name="MissileGauge" type="Control" parent="TopBar/MarginContainer/Row/MissileBox/MissileRow"]
custom_minimum_size = Vector2(150, 10)
size_flags_horizontal = 3
script = ExtResource("2")
segments = 10
fill_color = Color(0.95, 0.58, 0.2, 1)
empty_color = Color(0.12, 0.18, 0.22, 0.9)
outline_color = Color(0.65, 0.85, 1, 0.65)
segment_gap = 1.5
outline_width = 1.0

[node name="MissileValue" type="Label" parent="TopBar/MarginContainer/Row/MissileBox/MissileRow"]
size_flags_horizontal = 0
text = "0/0"
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 10
